<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_frag_parent_const"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".FragmentHome">

    <ImageView
        android:id="@+id/img_fragmain_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/img_logo"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:scaleX="4"
        android:scaleY="4"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_frag_appname"
        style="@style/txtViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/app_name"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_fragmain_logo" />

    <TextView
        android:id="@+id/txt_frag_description"
        style="@style/txtViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="30dp"
        android:text="@string/txt_frag_main_welcome"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textFontWeight="100"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_frag_disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_frag_appname" />

    <TextView
        android:id="@+id/txt_frag_disclaimer"
        style="@style/txtViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="bottom"
        android:text="@string/txt_frag_disclaimer"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>